# WGS84toCartesian

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  WGS84toCartesian.hpp  appveyor.yml
test/: Test-WGS84toCartesian.cpp
